--- a/src/pages/Homepage/components/Banner/Banner.module.css
+++ b/src/pages/Homepage/components/Banner/Banner.module.css
@@ -22,6 +22,9 @@
   position: absolute;
   left: 16px;
   bottom: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
 }
 
 .banner__title {
@@ -37,28 +40,28 @@
   line-clamp: 3;
 }
 
-.banner__controls {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-}
-
-.banner__button {
+.banner__detail-button {
   border: none;
   border-radius: 5px;
   background: rgba(255, 255, 255, 1);
   color: rgba(0, 0, 0, 1);
-  padding: 8px;
+  padding: 8px 12px;
   cursor: pointer;
 }
 
-.banner__button:hover {
+.banner__detail-button:visited {
+  color: black;
+}
+
+.banner__detail-button:hover {
   background: rgba(179, 87, 96, 1);
   color: rgba(255, 255, 255, 1);
 }
 
-.banner__button span {
+.banner__detail-button span {
+  font-size: 18px;
   margin-left: 3px;
+  vertical-align: middle;
 }
 
 @media all and (max-width: 800px) {
