--- a/src/layout/AppLayout.module.css
+++ b/src/layout/AppLayout.module.css
@@ -4,14 +4,15 @@
   left: 0;
   width: 100%;
   z-index: 1;
+  background: rgba(0, 0, 0, 1);
+  padding: 0 16px;
+  box-shadow: 0px 5px 20px 3px rgba(0, 0, 0, 1);
 }
 
 .nav__header {
   height: 64px;
   display: flex;
   align-items: center;
-  background: rgba(0, 0, 0, 1);
-  padding: 0 16px;
 }
 
 .nav__logo img {
