--- a/src/pages/Homepage/components/Banner/Banner.module.css
+++ b/src/pages/Homepage/components/Banner/Banner.module.css
@@ -53,7 +53,7 @@
   color: black;
 }
 
-.banner__detail-button:hover {
+.banner__detail-button:active {
   background: rgba(179, 87, 96, 1);
   color: rgba(255, 255, 255, 1);
 }
