--- a/src/pages/MovieDetailPage/MovieDetailPage.module.css
+++ b/src/pages/MovieDetailPage/MovieDetailPage.module.css
@@ -1,3 +1,25 @@
+.trailer-modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 1);
+  z-index: 2;
+}
+
+.trailer-modal iframe {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: calc(100% - 32px);
+  height: 56.25%;
+}
+
 .movie-detail__backdrop {
   height: 600px;
   border-radius: 5px;
@@ -67,6 +89,24 @@
 }
 
 .movie-detail__stats span {
+  margin-left: 5px;
+}
+
+.movie-detail__trailer-button {
+  padding: 5px 8px;
+  border: none;
+  background: rgba(255, 255, 255, 1);
+  border-radius: 5px;
+  margin: 16px 0;
+  cursor: pointer;
+}
+
+.movie-detail__trailer-button:active {
+  background: rgba(179, 87, 96, 1);
+  color: rgba(255, 255, 255, 1);
+}
+
+.movie-detail__trailer-button span {
   margin-left: 5px;
 }
 
