--- a/src/pages/MovieDetailPage/MovieDetailPage.module.css
+++ b/src/pages/MovieDetailPage/MovieDetailPage.module.css
@@ -96,6 +96,7 @@
   padding: 5px 8px;
   border: none;
   background: rgba(255, 255, 255, 1);
+  color: rgba(0, 0, 0, 1);
   border-radius: 5px;
   margin: 16px 0;
   cursor: pointer;
