--- a/src/pages/MovieDetailPage/components/ReviewItem/ReviewItem.module.css
+++ b/src/pages/MovieDetailPage/components/ReviewItem/ReviewItem.module.css
@@ -29,6 +29,7 @@
   border: none;
   border-radius: 5px;
   background: rgba(255, 255, 255, 1);
+  color: rgba(0, 0, 0, 1);
   cursor: pointer;
   padding: 5px 16px;
   display: block;
