--- a/src/layout/AppLayout.module.css
+++ b/src/layout/AppLayout.module.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 10;
   background: rgba(0, 0, 0, 1);
   padding: 0 16px;
   box-shadow: 0px 5px 20px 3px rgba(0, 0, 0, 1);
@@ -133,7 +133,15 @@
   height: 5px;
 }
 
-.scroll-top {
+.scroll-movement {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  left: 16px;
+  bottom: 16px;
+}
+
+.scroll-movement__button {
   width: 40px;
   height: 40px;
   border: none;
@@ -142,17 +150,6 @@
   color: rgba(255, 255, 255, 1);
   padding: 0;
   cursor: pointer;
-  position: fixed;
-  left: 16px;
-  bottom: 16px;
-  visibility: hidden;
-  opacity: 0;
-  transition: all 0.5s;
-}
-
-.scroll-top--visible {
-  visibility: visible;
-  opacity: 1;
 }
 
 @media all and (max-width: 627px) {
