--- a/src/pages/MovieDetailPage/MovieDetailPage.module.css
+++ b/src/pages/MovieDetailPage/MovieDetailPage.module.css
@@ -8,7 +8,18 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 1);
-  z-index: 2;
+  z-index: 15;
+}
+
+.trailer-modal__close-button {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  border: none;
+  background: transparent;
+  color: rgba(255, 255, 255, 1);
+  padding: 0;
+  cursor: pointer;
 }
 
 .trailer-modal iframe {
@@ -111,7 +122,8 @@
   margin-left: 5px;
 }
 
-.movie-cast {
+.movie-cast,
+.movie-recommendations {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -125,17 +137,20 @@
   touch-action: pan-x;
 }
 
-.movie-cast::-webkit-scrollbar {
+.movie-cast::-webkit-scrollbar,
+.movie-recommendations::-webkit-scrollbar {
   background: transparent;
   height: 8px;
 }
 
-.movie-cast::-webkit-scrollbar-thumb {
+.movie-cast::-webkit-scrollbar-thumb,
+.movie-recommendations::-webkit-scrollbar-thumb {
   background: rgba(179, 87, 96, 0.5);
   border-radius: 3px;
 }
 
-.movie-cast::-webkit-scrollbar-button {
+.movie-cast::-webkit-scrollbar-button,
+.movie-recommendations::-webkit-scrollbar-button {
   display: none;
 }
 
@@ -150,7 +165,7 @@
   margin-bottom: 0;
 }
 
-.movie-review {
+.movie-reviews {
   list-style: none;
   padding: 0;
   margin: 0;
